--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@floating-ui/dom": "^1.5.3",
     "@material-design-icons/svg": "^0.14.13",
     "nostr-tools": "^1.17.0",
+    "nosvelte": "^0.1.3",
     "svelte-i18n": "^4.0.0"
   }
 }
