--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@material-design-icons/svg": "^0.14.13",
     "nostr-tools": "^1.17.0",
     "nosvelte": "^0.1.3",
-    "svelte-i18n": "^4.0.0"
+    "svelte-i18n": "^4.0.0",
+    "websocket-polyfill": "^0.0.3"
   }
 }
