--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nostr-tools": "^1.17.0",
     "nosvelte": "^0.1.3",
     "svelte-i18n": "^4.0.0",
+    "unfurl.js": "^6.3.2",
     "websocket-polyfill": "^0.0.3"
   }
 }
