--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
 	"useTabs": true,
+	"tabWidth": 2,
 	"singleQuote": true,
 	"trailingComma": "none",
-	"printWidth": 100,
+	"printWidth": 80,
 	"plugins": ["prettier-plugin-svelte"],
 	"pluginSearchDirs": ["."],
 	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
