--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
     "format": "prettier --plugin-search-dir . --write .",
-    "test": "jest"
+    "test": "vitest"
   },
   "devDependencies": {
     "@skeletonlabs/skeleton": "2.3.0",
     "@skeletonlabs/tw-plugin": "0.2.2",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.20.4",
+    "@testing-library/svelte": "^4.0.4",
     "@types/jest": "^29.5.6",
     "@types/node": "20.8.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -25,18 +26,18 @@
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte": "^2.30.0",
-    "jest": "^29.7.0",
+    "jsdom": "^22.1.0",
     "postcss": "8.4.31",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.10.1",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
     "tailwindcss": "3.3.3",
-    "ts-jest": "^29.1.1",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^4.4.2",
-    "vite-plugin-tailwind-purgecss": "0.1.3"
+    "vite-plugin-tailwind-purgecss": "0.1.3",
+    "vitest": "^0.34.6"
   },
   "type": "module",
   "dependencies": {
@@ -46,7 +47,6 @@
     "nostr-tools": "^1.17.0",
     "nosvelte": "^0.1.3",
     "svelte-i18n": "^4.0.0",
-    "unfurl.js": "^6.3.2",
-    "websocket-polyfill": "^0.0.3"
+    "unfurl.js": "^6.3.2"
   }
 }
