--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@floating-ui/dom": "^1.5.3",
     "@material-design-icons/svg": "^0.14.13",
+    "@sveltejs/adapter-vercel": "^3.0.3",
     "@types/graceful-fs": "^4.1.8",
     "nostr-tools": "^1.17.0",
     "nosvelte": "^0.1.3",
