--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "20.8.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@vite-pwa/sveltekit": "^0.2.8",
     "autoprefixer": "10.4.16",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
@@ -45,9 +46,11 @@
     "@material-design-icons/svg": "^0.14.13",
     "@sveltejs/adapter-vercel": "^3.0.3",
     "@types/graceful-fs": "^4.1.8",
+    "@vercel/analytics": "^1.1.1",
     "nostr-tools": "^1.17.0",
     "nosvelte": "^0.1.3",
     "svelte-i18n": "^4.0.0",
-    "unfurl.js": "^6.3.2"
+    "unfurl.js": "^6.3.2",
+    "vite-plugin-pwa": "^0.17.2"
   }
 }
