--- a/.hintrc
+++ b/.hintrc
@@ -1,11 +1,22 @@
 {
-	"extends": ["development"],
-	"hints": {
-		"compat-api/html": [
-			"default",
-			{
-				"ignore": ["meta[name=theme-color]"]
-			}
-		]
-	}
+  "extends": [
+    "development"
+  ],
+  "hints": {
+    "compat-api/html": [
+      "default",
+      {
+        "ignore": [
+          "meta[name=theme-color]"
+        ]
+      }
+    ],
+    "axe/text-alternatives": [
+      "default",
+      {
+        "document-title": "off"
+      }
+    ],
+    "no-inline-styles": "off"
+  }
 }
