--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"typeRoots": ["node_modules/@types"],
-		"types": ["vite-plugin-pwa/info", "vite-plugin-pwa/svelte"]
+		"typeRoots": ["node_modules/@types"]
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
