--- a/package.json
+++ b/package.json
@@ -1,56 +1,56 @@
 {
-  "name": "nostr-bookmark-viewer5",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write .",
-    "test": "vitest"
-  },
-  "devDependencies": {
-    "@skeletonlabs/skeleton": "2.5.1",
-    "@skeletonlabs/tw-plugin": "0.2.4",
-    "@sveltejs/adapter-auto": "^2.1.1",
-    "@sveltejs/kit": "^1.27.7",
-    "@testing-library/svelte": "^4.0.5",
-    "@types/jest": "^29.5.11",
-    "@types/node": "20.10.3",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
-    "@vite-pwa/sveltekit": "^0.2.8",
-    "autoprefixer": "10.4.16",
-    "eslint": "^8.55.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-svelte": "^2.35.1",
-    "jsdom": "^22.1.0",
-    "postcss": "8.4.32",
-    "prettier": "^2.8.8",
-    "prettier-plugin-svelte": "^2.10.1",
-    "svelte": "^4.2.8",
-    "svelte-check": "^3.6.2",
-    "tailwindcss": "3.3.6",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.2",
-    "vite": "^4.5.1",
-    "vite-plugin-tailwind-purgecss": "0.1.4",
-    "vitest": "^0.34.6"
-  },
-  "type": "module",
-  "dependencies": {
-    "@floating-ui/dom": "^1.5.3",
-    "@material-design-icons/svg": "^0.14.13",
-    "@sveltejs/adapter-vercel": "^3.1.0",
-    "@types/graceful-fs": "^4.1.9",
-    "@vercel/analytics": "^1.1.1",
-    "nostr-tools": "^1.17.0",
-    "nosvelte": "^0.1.3",
-    "svelte-i18n": "^4.0.0",
-    "unfurl.js": "^6.3.2",
-    "vite-plugin-pwa": "^0.17.3"
-  }
+	"name": "nostrviewstr",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write .",
+		"test": "vitest"
+	},
+	"devDependencies": {
+		"@skeletonlabs/skeleton": "2.5.1",
+		"@skeletonlabs/tw-plugin": "0.2.4",
+		"@sveltejs/adapter-auto": "^2.1.1",
+		"@sveltejs/kit": "^1.27.7",
+		"@testing-library/svelte": "^4.0.5",
+		"@types/jest": "^29.5.11",
+		"@types/node": "20.10.3",
+		"@typescript-eslint/eslint-plugin": "^6.13.2",
+		"@typescript-eslint/parser": "^6.13.2",
+		"@vite-pwa/sveltekit": "^0.2.8",
+		"autoprefixer": "10.4.16",
+		"eslint": "^8.55.0",
+		"eslint-config-prettier": "^8.10.0",
+		"eslint-plugin-svelte": "^2.35.1",
+		"jsdom": "^22.1.0",
+		"postcss": "8.4.32",
+		"prettier": "^2.8.8",
+		"prettier-plugin-svelte": "^2.10.1",
+		"svelte": "^4.2.8",
+		"svelte-check": "^3.6.2",
+		"tailwindcss": "3.3.6",
+		"tslib": "^2.6.2",
+		"typescript": "^5.3.2",
+		"vite": "^4.5.1",
+		"vite-plugin-tailwind-purgecss": "0.1.4",
+		"vitest": "^0.34.6"
+	},
+	"type": "module",
+	"dependencies": {
+		"@floating-ui/dom": "^1.5.3",
+		"@material-design-icons/svg": "^0.14.13",
+		"@sveltejs/adapter-vercel": "^3.1.0",
+		"@types/graceful-fs": "^4.1.9",
+		"@vercel/analytics": "^1.1.1",
+		"nostr-tools": "^1.17.0",
+		"nosvelte": "^0.1.3",
+		"svelte-i18n": "^4.0.0",
+		"unfurl.js": "^6.3.2",
+		"vite-plugin-pwa": "^0.17.3"
+	}
 }
