--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"@vercel/analytics": "^1.1.2",
 		"nostr-tools": "^1.17.0",
 		"nosvelte": "^0.1.3",
+		"rx-nostr": "^1.1.0",
 		"svelte-i18n": "^4.0.0",
 		"unfurl.js": "^6.3.2",
 		"vite-plugin-pwa": "^0.17.4"
