--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@sveltejs/adapter-vercel": "^3.1.0",
 		"@types/graceful-fs": "^4.1.9",
 		"@vercel/analytics": "^1.1.2",
+		"nostr-login": "^1.0.11",
 		"nostr-tools": "^1.17.0",
 		"nosvelte": "^0.1.3",
 		"rx-nostr": "^1.1.0",
