--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.2.12",
 		"svelte-check": "^3.6.7",
+		"svelte-dnd-action": "^0.9.42",
 		"tailwindcss": "3.4.1",
 		"tslib": "^2.6.2",
 		"typescript": "^5.4.2",
