--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	},
 	"devDependencies": {
 		"@skeletonlabs/skeleton": "^2.9.2",
-		"@skeletonlabs/tw-plugin": "0.4.0",
+		"@skeletonlabs/tw-plugin": "^0.4.0",
 		"@sveltejs/adapter-auto": "^2.1.1",
 		"@sveltejs/kit": "^1.30.4",
 		"@testing-library/svelte": "^4.2.3",
