--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@skeletonlabs/tw-plugin": "0.4.0",
 		"@sveltejs/adapter-auto": "^3.2.2",
 		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@testing-library/svelte": "^5.2.0",
 		"@types/jest": "^29.5.12",
 		"@types/node": "20.14.9",
