--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
 		"nostr-login": "^1.5.2",
 		"nostr-tools": "^1.17.0",
 		"nostr-typedef": "^0.9.0",
-		"rx-nostr": "^2.7.3",
+		"rx-nostr": "^3.1.1",
+		"rx-nostr-crypto": "^3.0.3",
 		"svelte-i18n": "^4.0.0",
 		"unfurl.js": "^6.4.0",
 		"vite-plugin-pwa": "^0.20.0"
